[package]
name = "audiopipe"
version = "0.1.0"
authors = ["Marco Rebhan <me@dblsaiko.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["time"] }
futures = "0.3.13"
log = "0.4.14"
bytes = "1.0.1"
