[package]
name = "audiopipe"
version = "0.1.0"
authors = ["Marco Rebhan <me@dblsaiko.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
futures = "0.3.13"
log = "0.4.14"
bytes = "1.0.1"
pin-project-lite = "0.2.6"
dasp = { version = "0.11.0", features = ["interpolate", "interpolate-linear", "signal", "ring_buffer"] }
dasp_graph = { version = "0.11.0", features = ["node-boxed", "node-signal"] }
petgraph = "0.5.1"