[package]
name = "r2dj"
version = "0.1.0"
authors = ["2xsaiko <git@dblsaiko.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mumble = { path = "../mumble" }
player2x = { path = "../player2x" }

tokio = { version = "1.2.0", features = ["full"] }
thiserror = "1.0.24"
tokio-util = { version = "0.6.3", features = ["net"] }
futures = "0.3.13"
log = "0.4.14"
simplelog = "0.9.0"
cmdparser = { git = "https://git.2x.ax/~saiko/cmdparser" }
uuid = "0.8.2"
librespot = "0.1.6"
rand = "0.8.3"
sqlx = { version = "0.5.1", features = ["runtime-tokio-rustls"] }