[package]
name = "migtool"
version = "0.1.0"
authors = ["2xsaiko <git@dblsaiko.net>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.1"
chrono = "0.4.11"
cmdparser = { git = "https://git.2x.ax/~saiko/cmdparser", default-features = false }
uuid = { version = "0.8.1", features = ["v4"] }
sqlx = { version = "0.3.5", default-features = false, features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono"] }
tokio = { version =  "0.2.20", features = ["stream"] }
anyhow = "1.0.31"
