[package]
name = "mumble"
description = "A Mumble client implementation"
version = "0.1.0"
authors = ["Marco Rebhan <me@dblsaiko.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiopipe = { path = "../audiopipe" }

mumble-protocol = "0.4.1"
tokio = { version = "1.2.0", features = ["full"] }
tokio-rustls = "0.22.0"
webpki-roots = "0.21.0"
thiserror = "1.0.24"
tokio-util = { version = "0.6.3", features = ["net"] }
futures = "0.3.13"
sysinfo = "0.16.4"
log = "0.4.14"
bytes = "1.0.1"
audiopus = "0.2.0"
byteorder = "1.4.2"
#rand = "0.8.3"
#serde = { version = "1.0.125", features = ["derive"] }
#serde_json = "1.0.64"
bit-set = "0.5.2"
