[package]
name = "mumble"
description = "A Mumble client implementation"
version = "0.1.0"
authors = ["Marco Rebhan <me@dblsaiko.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiopipe = { path = "../audiopipe" }
msgtools = { path = "../msgtools" }

mumble-protocol = { package = "mumble-protocol-2x", default-features = false, features = ["openssl", "asynchronous-codec"] }
tokio = { version = "1.2.0", features = ["full"] }
tokio-rustls = "0.22.0"
async-std = "1.10.0"
async-tls = "0.11.0"
async-compat = "0.2.1"
async-broadcast = "0.3.4"
asynchronous-codec = "0.6.0"
rustls = "0.19.1" # async-tls needs this...
rustls-pemfile = "0.2.1"
webpki = "0.22.0"
webpki-roots = "0.21.1"
thiserror = "1.0.24"
tokio-util = { version = "0.6.3", features = ["net"] }
futures = "0.3.13"
sysinfo = "0.20.2"
log = "0.4.14"
bytes = "1.0.1"
audiopus = "0.2.0"
byteorder = "1.4.2"
#rand = "0.8.3"
#serde = { version = "1.0.125", features = ["derive"] }
#serde_json = "1.0.64"
bit-set = "0.5.2"
dasp = { version = "0.11.0", features = ["signal", "ring_buffer"] }
dasp_graph = "0.11.0"
petgraph = "0.5.1"

[dev-dependencies]
async-std = { version = "1.10.0", features = [ "attributes" ] }